force-app/src/objects/TR1__ATS_Candidate_Action_Configuration__mdt.object
<CustomObject>
    <description>Controlling the behavior of each action on Candidate ATS</description>
    <fields>
        <fullName>TR1__ATS_Flow_Settings__c</fullName>
        <description>Reference to &apos;ATS Flow Settings&apos; CMT to run action as a Flow</description>
        <inlineHelpText>Reference to &apos;ATS Flow Settings&apos; CMT to run action as a Flow</inlineHelpText>
        <label>ATS Flow Settings</label>
        <referenceTo>TR1__ATSFlowSettings__mdt</referenceTo>
        <relationshipLabel>ATS Candidate Action Configurations</relationshipLabel>
        <relationshipName>ATS_Candidate_Action_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>TR1__Action_Name__c</fullName>
        <description>Name of the action (its value is displayed for new custom action if the custom label is not specified)</description>
        <inlineHelpText>Name of the action (its value is displayed for new custom action if the custom label is not specified)</inlineHelpText>
        <label>Action Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean flag for enabling/disabling this action</description>
        <inlineHelpText>Boolean flag for enabling/disabling this action</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Additional_Attribute__c</fullName>
        <inlineHelpText>Additional attributes that will be added to a component when an action is taken. This should be specified in a JSON format.</inlineHelpText>
        <label>Additional Attributes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Additional_Attributes__c</fullName>
        <label>Deprecated</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Component_Name__c</fullName>
        <description>Name of the custom Aura component running for custom action</description>
        <inlineHelpText>Name of the custom Aura component running for custom action</inlineHelpText>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Custom_Label_Name__c</fullName>
        <description>The Custom Label API name which will be translated if it has appropriate translations.
This is used only for custom actions</description>
        <inlineHelpText>The Custom Label API name which will be translated if it has appropriate translations.
This is used only for custom actions</inlineHelpText>
        <label>Custom Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Disable_for_Closed_Jobs__c</fullName>
        <description>Controlling the availability of action for closed jobs</description>
        <inlineHelpText>Controlling the availability of action for closed jobs. Enable/Disable values will override Custom Setting configuration.
Values:
&apos;None&apos; - &apos;Disable ATSv2 actions for Closed Jobs&apos; from the ATS Configuration Custom Setting will be applied
&apos;Enabled&apos; - enable action on Closed Jobs 
&apos;Disabled&apos; - disable action on Closed Jobs</inlineHelpText>
        <label>Disable for Closed Jobs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enabled</fullName>
                    <default>true</default>
                    <label>Enabled</label>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Display_Location__c</fullName>
        <defaultValue>&apos;Dropdown&apos;</defaultValue>
        <description>Controls whether the particular action location is in the bar or in the dropdown</description>
        <inlineHelpText>Controls whether the particular action location is in the bar or in the dropdown</inlineHelpText>
        <label>Display Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dropdown</fullName>
                    <default>true</default>
                    <label>Dropdown</label>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Right bar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Icon_Name__c</fullName>
        <description>The name of the SLDS icon that will be shown in the Bar for this action (if we need to support Bar location)</description>
        <inlineHelpText>The name of the SLDS icon that will be shown in the Bar for this action (if we need to support Bar location)</inlineHelpText>
        <label>Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Order_Number__c</fullName>
        <description>Controls the order of the Action on Candidate ATS</description>
        <inlineHelpText>Controls the order of the Action on Candidate ATS</inlineHelpText>
        <label>Order Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ATS Candidate Action Configuration</label>
    <pluralLabel>ATS Candidate Action Configurations</pluralLabel>
</CustomObject>